- added post functionality

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,7 +1,7 @@
-<%- include("partials/header") -%>
+<%- include("partials/header"); -%>
 
 <h1>About</h1>
 
 <p><%= aboutInfo%></p>
 
-<%- include("partials/footer") -%>
+<%- include("partials/footer"); -%>
