--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header") -%>
+<%- include("partials/header"); -%>
 
 <h1>Compose</h1>
 
@@ -12,4 +12,4 @@
   <button class="btn btn-primary" type="submit" class="btn-" name="button">Publish</button>
 </form>
 
-<%- include("partials/footer") -%>
+<%- include("partials/footer"); -%>
