--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,14 @@
-<%- include("partials/header") -%>
+<%- include("partials/header"); -%>
 
 <h1>Home</h1>
 
 <p><%= startingInfo%></p>
 
-<%- include("partials/footer") -%>
+
+<% posts.forEach(function(post){ %>
+<h1><%=post.title%></h1>
+<p><%=post.content%></p>
+<% }); %>
+
+
+<%- include("partials/footer"); -%>
