--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -9,7 +9,7 @@
     <label>Post</label>
     <textarea class="form-control" name="postBody" rows="5" cols="30"></textarea>
   </div>
-  <button class="btn btn-primary" type="submit" class="btn-" name="button">Publish</button>
+  <button class="btn btn-primary" type="submit" name="button">Publish</button>
 </form>
 
 <%- include("partials/footer"); -%>
